--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "sass": "^1.80.6",
+    "vite-plugin-require": "^1.2.14",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
