--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.3.1",
     "sass": "^1.80.6",
     "vite-plugin-require": "^1.2.14",
     "vue": "^3.5.12",
